--- a/package.json
+++ b/package.json
@@ -66,12 +66,16 @@
     "react-native": "0.69.7",
     "react-native-bootsplash": "4.3.2",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-get-random-values": "^1.8.0",
+    "react-native-modal-selector": "^2.1.2",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.4",
     "react-native-screens": "3.15.0",
+    "react-native-simple-dialogs": "^1.5.0",
     "reactotron-mst": "3.1.4",
     "reactotron-react-js": "^3.3.7",
-    "reactotron-react-native": "5.0.3"
+    "reactotron-react-native": "5.0.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
