--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react": "18.0.0",
     "react-native": "0.69.7",
     "react-native-bootsplash": "4.3.2",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-modal-selector": "^2.1.2",
