--- a/package.json
+++ b/package.json
@@ -41,13 +41,14 @@
     "@expo/webpack-config": "^0.17.0",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-native-community/netinfo": "^9.3.7",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "~6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
     "@react-navigation/stack": "~6.2.1",
     "apisauce": "2.1.5",
     "date-fns": "^2.29.2",
-    "expo": "~46.0.17",
+    "expo": "^46.0.0",
     "expo-application": "~4.2.2",
     "expo-constants": "~13.2.3",
     "expo-device": "~4.3.0",
