--- a/ios/Podfile
+++ b/ios/Podfile
@@ -17,6 +17,11 @@ target 'EhkamApp' do
     rescue => e
       Pod::UI.warn e
     end
+    begin
+      expo_patch_react_imports!(installer)
+    rescue => e
+      Pod::UI.warn e
+    end
   end
   config = use_native_modules!
 
