--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-native-safe-area-context": "4.3.4",
     "react-native-screens": "3.15.0",
     "react-native-simple-dialogs": "^1.5.0",
+    "react-native-svg": "^13.9.0",
     "reactotron-mst": "3.1.4",
     "reactotron-react-js": "^3.3.7",
     "reactotron-react-native": "5.0.3",
